--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,21 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "vercel-handler.ts",
-      "use": "@vercel/node"
-    }
+      {
+          "src": "src/vercel-handler.ts",
+          "use": "@vercel/node"
+      }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/vercel-handler.ts"
-    }
+      {
+          "src": "/(.*)",
+          "dest": "src/vercel-handler.ts",
+          "methods": [
+              "GET",
+              "POST",
+              "PUT",
+              "DELETE"
+          ]
+      }
   ]
 }
