--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,9 @@
 {
   "version": 2,
   "builds": [
-      {
-          "src": "src/vercel-handler.ts",
-          "use": "@vercel/node"
-      }
+    { "src": "src/vercel-handler.ts", "use": "@vercel/node" }
   ],
   "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "src/vercel-handler.ts",
-          "methods": [
-              "GET",
-              "POST",
-              "PUT",
-              "DELETE"
-          ]
-      }
+    { "src": "/(.*)", "dest": "src/vercel-handler.ts" }
   ]
 }
