--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
   "version": 2,
   "builds": [
-    { "src": "src/vercel-handler.ts", "use": "@vercel/node" }
+    {
+      "src": "dist/main.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/vercel-handler.ts" }
+    {
+      "src": "/(.*)",
+      "dest": "dist/main.js",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"]
+    }
   ]
 }
