--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL="file:./dev.db"
+# DATABASE_URL="postgresql://unisinos-groups_owner:iB1mRCzu9nDf@ep-twilight-sun-a5935556-pooler.us-east-2.aws.neon.tech/unisinos-groups?sslmode=require"
 JWT_SECRET_KEY="fn394unyb283bf"
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:docker@localhost:5432/mydb?schema=public"
